<resources>

        <string name="app_name">银商生活</string>
        <string name="first_activity">活动</string>
        <string name="first_club">俱乐部</string>
        <string name="first_mine_info">我</string>
        <string name="to_login">登  录</string>
        <string name="send">发送</string>
        <string name="please_input_new_pwd">请输入新密码</string>
        <string name="please_input_pwd">请输入密码</string>
        <string name="please_input_new_pwd_again">请再次输入新密码</string>
        <string name="please_input_ver_code">请输入新密码</string>
        <string name="new_pwd">新密码</string>
        <string name="hint_pwd">新密码</string>
        <string name="ver_code">验证码</string>
        <string name="hint_input_again">再次输入</string>
        <string name="please_input_phone">请输入手机号码</string>
        <string name="phone">手机号</string>
        <string name="introduction">简介</string>
        <string name="all_member">全部成员</string>
        <string name="mine_name">姓名：</string>
        <string name="mine_department">部门：</string>
        <string name="mine_phone">电话：</string>
        <string name="mine_points">积分：</string>
        <string name="ok_change_pwd">确认修改</string>
        <string name="message_login">验证码登录</string>
        <string name="pwd_login">密码登录</string>
        <string name="auto_login">自助登录</string>
        <string name="my_act">我的活动</string>
        <string name="my_club">我的俱乐部</string>
        <string name="about">关于我们</string>
        <string name="change_pwd">密码修改</string>
        <string name="logout">注销</string>
        <string name="integral_details">积分明细</string>
        <string name="is_apply">已报名</string>
        <string name="btn_apply">报名</string>
        <string name="btn_sign">签到</string>
        <string name="btn_upload">上传</string>
        <string name="act_start_time">活动开始时间</string>
        <string name="act_end_time">活动结束时间</string>
        <string name="address">位置</string>
        <string name="act_integral">活动积分</string>
        <string name="app_end_time">报名截止时间:</string>
        <string name="act_content">活动内容</string>
        <string name="more">更多</string>
        <string name="member">成员 </string>
        <string name="no_data">抱歉,暂无数据</string>
        <string name="forget_pwd">忘记密码?</string>
        <string name="club_name">俱乐部名称</string>





</resources>
