<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_10_dip"
        android:paddingRight="@dimen/dimen_10_dip">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/please_input_new_pwd"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="11"
            android:textSize="@dimen/dimen_12_dip"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/new_pwd"
            app:met_hideUnderline="true"
            app:met_iconLeft="@drawable/ic_login_password"
            app:met_primaryColor="@color/red_main" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="@dimen/dimen_5_dip"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_10_dip"
        android:paddingRight="@dimen/dimen_10_dip">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/please_input_new_pwd_again"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="11"
            android:textSize="@dimen/dimen_12_dip"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/hint_input_again"
            app:met_hideUnderline="true"
            app:met_iconLeft="@drawable/ic_password_again"
            app:met_primaryColor="@color/red_main" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="@dimen/dimen_5_dip"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5_dip"
        android:paddingLeft="@dimen/dimen_10_dip"
        android:paddingRight="@dimen/dimen_10_dip">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_verification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_send_code"
            android:hint="@string/please_input_ver_code"
            android:inputType="number"
            android:lines="1"
            android:textSize="@dimen/dimen_12_dip"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/ver_code"
            app:met_hideUnderline="true"
            app:met_iconLeft="@drawable/ic_verification"
            app:met_primaryColor="@color/red_main" />


        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="@dimen/dimen_60_dip"
            android:layout_height="@dimen/dimen_30_dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bt_count_down_bg_selector"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_10_dip" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="@dimen/dimen_5_dip"
        android:background="@color/line" />

    <Button
        android:id="@+id/btn_change_pwd"
        style="@style/bt_submit_style"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:clickable="true"
        android:text="@string/ok_change_pwd" />

</LinearLayout>