<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <!-- 设置fillViewport属性表示充满整个ScrollView -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/red_main"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/dimen_5_dip"
                android:src="@drawable/ic_logo3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_5_dip"
            android:visibility="visible">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/please_input_phone"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="11"
                    android:textSize="@dimen/dimen_12_dip"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/phone"
                    app:met_hideUnderline="true"
                    app:met_iconLeft="@drawable/ic_login_account"
                    app:met_primaryColor="@color/red_main" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="@dimen/dimen_5_dip"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5_dip"
                android:paddingLeft="@dimen/dimen_10_dip"
                android:paddingRight="@dimen/dimen_10_dip">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/bt_send_auth_code"
                    android:hint="@string/please_input_pwd"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textSize="@dimen/dimen_12_dip"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/hint_pwd"
                    app:met_hideUnderline="true"
                    app:met_iconLeft="@drawable/ic_login_password"
                    app:met_primaryColor="@color/red_main" />


                <Button
                    android:id="@id/bt_send_auth_code"
                    android:layout_width="@dimen/dimen_60_dip"
                    android:layout_height="@dimen/dimen_30_dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_count_down_bg_selector"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_10_dip"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="@dimen/dimen_5_dip"
                android:background="@color/line" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/bt_submit_bg_selector"
                android:text="@string/to_login"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16_dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <LinearLayout
                    android:id="@+id/ll_auto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_auto_login"
                        android:layout_width="@dimen/dimen_23_dip"
                        android:layout_height="@dimen/dimen_23_dip"
                        android:layout_gravity="center_vertical"
                        android:clickable="true"
                        android:padding="@dimen/dimen_5_dip"
                        android:src="@drawable/ic_login_not_choose" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/auto_login" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_login_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:text="@string/message_login"
                    android:textColor="@color/red_main" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alwaysDrawnWithCache="true"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/forget_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_main"
                android:layout_gravity="center_horizontal|bottom"
                android:padding="@dimen/dimen_10_dip"
                android:text="@string/forget_pwd"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>