<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_180_dip"
                android:scaleType="fitXY"
                android:src="@drawable/bg_default" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10_dip">

                <TextView
                    android:id="@+id/tv_act_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/ll_sign"
                    android:lines="1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_club_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/tv_act_name"
                    android:layout_toLeftOf="@+id/ll_sign"
                    android:lines="1"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/ll_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_apply"
                        style="@style/tv_submit_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:text="@string/btn_apply"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_sign"
                        style="@style/tv_submit_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_sign"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_upload"
                        style="@style/tv_submit_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_upload"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <ImageView
                    android:layout_width="@dimen/dimen_12_dip"
                    android:layout_height="@dimen/dimen_12_dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:text="@string/act_start_time"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_signStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5_dip"
                    android:lines="1"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <ImageView
                    android:layout_width="@dimen/dimen_12_dip"
                    android:layout_height="@dimen/dimen_12_dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_time2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:text="@string/act_end_time"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_signEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5_dip"
                    android:lines="1"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <ImageView
                    android:layout_width="@dimen/dimen_12_dip"
                    android:layout_height="@dimen/dimen_12_dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:text="@string/address"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5_dip"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <ImageView
                    android:layout_width="@dimen/dimen_12_dip"
                    android:layout_height="@dimen/dimen_12_dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_integral" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:text="@string/act_integral"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5_dip"
                    android:textColor="@color/red_main"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <ImageView
                    android:layout_width="@dimen/dimen_12_dip"
                    android:layout_height="@dimen/dimen_12_dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_member" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:text="@string/is_apply"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5_dip"
                    android:textColor="@color/green_txt"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/app_end_time" />

                <TextView
                    android:id="@+id/tv_endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5_dip"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/act_content" />

                <LinearLayout
                    android:id="@+id/ll_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/gray_txt"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/iv_right"
                        android:layout_width="@dimen/dimen_12_dip"
                        android:layout_height="@dimen/dimen_12_dip"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_right" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10_dip">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="5"
                    android:textColor="@color/gray_txt"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>